assets/css/style.css
body {
    min-height: 100vh;
    margin: 0;
    display: grid;
    grid-template-rows: auto 1fr auto;
}

header {
    min-height: 50px;
}

.navbarstyle {
    background-color: rgb(198, 151, 116);
    /* padding-bottom: 5rem; */
}

.hero-image {
    /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
        url("../image/book_club_purpose_1570x.webp");

    padding-top: 10rem;
    padding-bottom: 1rem;
    /* Set a specific height */
    height: 50%;
    width: 100%;
    /* Position and center the image to scale nicely on all screens */
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: center;
}

.hero-text {
    text-align: center;
    top: 50%;
    left: 50%;
    transform: ranslate(-50%, -50%);
    color: white;
}
h1,
h2 {
    padding: 1rem;
}

.about-paragraphs {
    /* padding: 0.1rem; */
    background-color: rgb(198, 151, 116);
    border-radius: 5%;
}

.center-text {
    /* display: flex;
    justify-content: center;
    align-items: center; */
    text-align: center;
    padding: 1rem;
}

#footer {
    background-color: rgb(198, 152, 116);
    display: inline-block;
    justify-content: center;
    text-align: center;
    height: 50px;
    width: 100%;
    flex-direction: column;
}

.fa {
    padding: 10px 30px;
    font-size: 30px;
    width: 30px;
    /* text-align: center; */
    text-decoration: none;
    border-radius: 50%;
    color: white;
}

@media only screen and (max-width: 768px) {
    .navbarstyle {
        position: fixed;
        top: 0;
        width: 100%;
    }
}

